# negotia

./: .gitignore  README.md  TODO.md  analyze_buyer.py  analyze_seller.py  buyer.py  config.yaml  entities.py  improve_seller.py  main.py  negotiation_20250202_102358.txt  negotiation_20250202_103153.txt  negotiation_20250202_140730.txt  negotiation_arena.py  negotiation_insights.py  prompts.py  pyproject.toml  repository.py  seller.py  spec.md  template_manager.py
prompts/: __init__.py  base_prompt.py  buyer_prompt.j2  buyer_prompt.py  seller_prompt.j2  seller_prompt.py
swarm/: __init__.py  config.yaml  config_multi_item.yaml  config_tech_components.yaml  main.py
swarm/agents/: __init__.py  base.py  repositories.py
swarm/core/: __init__.py  negotiation.py  scheduler.py  scoring.py  terms.py
swarm/logs/N1_buyer1/: chat.txt
swarm/logs/N1_buyer2/: chat.txt
swarm/logs/N1_buyer3/: chat.txt
swarm/logs/N2_buyer1/: chat.txt
swarm/logs/N2_buyer2/: chat.txt
swarm/logs/N2_buyer3/: chat.txt
swarm/prompts/: buyer_prompt.j2  multi_item_buyer_prompt.j2  multi_item_seller_prompt.j2  seller_prompt.j2
swarm/utils/: __init__.py  evaluator.py  file_io.py  template_manager.py
templates/: base.jinja2  buyer_prompt.j2  seller_prompt.j2
templates/buyer/: tactics.j2  tactics.jinja2
templates/seller/: tactics.j2  tactics.jinja2
tests/: __init__.py  conftest.py  run_tests.py  test_ai_model.py  test_evaluator.py  test_logger.py  test_negotiator.py  test_prompts.py  test_repositories.py  test_scoring.py
